--- a/requirements.txt
+++ b/requirements.txt
@@ -88,6 +88,7 @@ pexpect==4.6.0
 Pillow==7.0.0
 platformdirs==2.3.0
 protobuf==3.6.1
+postgresql
 psycopg2==2.9.1
 psycopg2-binary==2.8.6
 pycairo==1.16.2
@@ -100,7 +101,7 @@ pymacaroons==0.13.0
 PyNaCl==1.3.0
 pyparsing==2.4.7
 pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.6
+
 python-dateutil==2.8.2
 python-debian===0.1.36ubuntu1
 python-magic==0.4.24
